// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-20 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-20:active {
  text-decoration-thickness: 2px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-33 {
  margin-bottom: 1.5rem;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="emotion-11 emotion-12"
            >
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  1
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-25 emotion-17"
                >
                  2
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-31 emotion-32"
          >
            <div
              class="emotion-33 emotion-34"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-35 emotion-36"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-20 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-20:active {
  text-decoration-thickness: 2px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-33 {
  margin-bottom: 1.5rem;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h3
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow11 uv_m4c9ow1b uv_m4c9ow3c"
        >
          Header
        </h3>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="emotion-11 emotion-12"
            >
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  1
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-25 emotion-17"
                >
                  2
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-31 emotion-32"
          >
            <div
              class="emotion-33 emotion-34"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="emotion-35 emotion-36"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-7 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-7[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-7[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-9 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-13 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-22 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-22:active {
  text-decoration-thickness: 2px;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-35 {
  margin-bottom: 1.5rem;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="_r_0_"
          aria-describedby="_r_0_"
          class="emotion-4 emotion-5"
          data-container-full-width="false"
          tabindex="0"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-9 emotion-3"
        >
          <div
            class="emotion-11 emotion-12"
          >
            <ul
              class="emotion-13 emotion-14"
            >
              <li
                class="emotion-15 emotion-16 emotion-17"
              >
                <div
                  class="emotion-18 emotion-19"
                >
                  1
                </div>
                <div
                  class="emotion-20 emotion-21"
                >
                  <h3
                    class="emotion-22 emotion-23 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-15 emotion-16 emotion-17"
              >
                <div
                  class="emotion-27 emotion-19"
                >
                  2
                </div>
                <div
                  class="emotion-20 emotion-21"
                >
                  <h3
                    class="emotion-22 emotion-23 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-33 emotion-34"
          >
            <div
              class="emotion-35 emotion-36"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-37 emotion-38"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-11 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-18 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
  min-width: 0;
}

.emotion-20 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-20:active {
  text-decoration-thickness: 2px;
}

.emotion-20 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-20:active {
  text-decoration-thickness: 2px;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-27 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-27 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-27 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-27 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-35 {
  margin-bottom: 1.5rem;
}

.emotion-35 {
  margin-bottom: 1.5rem;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="emotion-11 emotion-12"
            >
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-16 emotion-17"
                >
                  1
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-13 emotion-14 emotion-15"
              >
                <div
                  class="emotion-25 emotion-17"
                >
                  <svg
                    class="emotion-27 emotion-28"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <h3
                    class="emotion-20 emotion-21 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-33 emotion-34"
          >
            <div
              class="emotion-35 emotion-36"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-37 emotion-38"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
